# drafts-i

./: README.md  pyproject.toml
src/drafts_i/: cli.py  config.py  ingest.py  query.py
src/drafts_i/tests/: init_db.py  test_rag.py  test_vec.py
